--- a/recruiting-tool-backend/.env.example
+++ b/recruiting-tool-backend/.env.example
@@ -2,3 +2,4 @@
 
 PORT = 4000 # Default value: 4000
 DATABASE_URL="postgresql://postgres:password@localhost:5432/recruiting_tool_db"
+JWT_SECRET = 'YOURSECRETTOKEN'
