Added admin user module, added docker entrypoint for automatic migrations, fixed some stuff

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
       - ./recruiting-tool-backend:/app
     networks:
       - app-network
+    entrypoint: ['/bin/sh', '/app/docker-entrypoint.sh']
+    command: ['yarn', 'run', 'start']
 
 networks:
   app-network:
