--- a/recruiting-tool-backend/.env.example
+++ b/recruiting-tool-backend/.env.example
@@ -3,3 +3,8 @@
 PORT = 4000 # Default value: 4000
 DATABASE_URL="postgresql://postgres:password@localhost:5432/recruiting_tool_db"
 JWT_SECRET = 'YOURSECRETTOKEN'
+
+# Super Admin credentials
+ADMIN_NAME = 'John Doe'
+ADMIN_PASSWORD = 'Testing123'
+ADMIN_EMAIL = 'johndoe@hotmail.com'
